--- a/scss/style.scss
+++ b/scss/style.scss
@@ -290,10 +290,10 @@ body {
 
 .about-me-block-component {
     background-color: var(--bs-primary-background);
-    padding: 0 12px 20px 12px;
+    padding: 0 12px 40px 12px;
 
     .about-me-header-row {
-        padding: 30px 0;
+        padding: 40px 0;
 
         .about-me-header-container {
             width: 50%;
@@ -353,7 +353,7 @@ body {
 
 .news-feed-header-component {
     background-color: var(--bs-primary-background);
-    padding: 100px 12px 30px 12px;
+    padding: 40px 0;
 
     .news-feed-header-container {
         width: 50%;
@@ -396,7 +396,7 @@ body {
 }
 
 .news-feed-block-component {
-    background-color: var(--bs-secondary-background);
+    background-color: var(--bs-primary-background);
     padding: 0 12px 60px 12px;
 
     .news-feed-row {
@@ -437,8 +437,8 @@ body {
 /****************** FRONT PAGE - CHOOSE AN ABILITY ******************/
 
 .choose-ability-component{
-    background-color: var(--bs-primary-background);
-    padding: 80px 12px 80px 12px;
+    background-color: var(--bs-secondary-background);
+    padding: 40px 12px;
 
     .choose-ability-container {
         display: flex;
