Fixing news cards color

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -408,7 +408,7 @@ body {
             --bs-gutter-x: 1.5rem !important;
 
             .card {
-                background-color: var(--bs-primary-background);
+                background-color: var(--bs-secondary-background);
                 border: none;
     
                 .card-img-top {
