--- a/style.css
+++ b/style.css
@@ -11762,6 +11762,17 @@ body {
 }
 
 /****************** HEADER ******************/
+.menu li.has-children > a:after {
+  color: var(--bs-lighter-text);
+  content: " ▼";
+  font-size: 12.5px;
+  font-weight: bold;
+  vertical-align: 1px;
+}
+.menu li.has-children > a:after:hover {
+  color: var(--bs-primary);
+}
+
 .header-row {
   padding: 0 !important;
 }
@@ -11800,6 +11811,23 @@ body {
           text-decoration: none;
       }
   } */
+}
+.header .header-navigation #primary-menu #menu-item-11 ul {
+  display: none;
+  background-color: var(--bs-primary-background);
+  padding: 0 10px;
+}
+.header .header-navigation #primary-menu #menu-item-11 ul :last-child {
+  margin-bottom: 10px;
+}
+.header .header-navigation #primary-menu #menu-item-11 ul li {
+  margin: 15px 0;
+  list-style-type: none;
+}
+.header .header-navigation #primary-menu #menu-item-11:hover ul {
+  display: block;
+  position: absolute;
+  z-index: 20;
 }
 .header .header-navigation #primary-menu li {
   margin: 0 15px;
@@ -12275,6 +12303,14 @@ body {
   margin: 20px 0 20px 10px !important;
   width: 80%;
 }
+.secondary-block-component .row .secondary-block-buttons {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.secondary-block-component .row .secondary-block-buttons #margin-for-button {
+  margin-left: 20px;
+}
 .secondary-block-component .row .secondary-block-video .showcase-video {
   display: flex;
   justify-content: center;
@@ -12462,6 +12498,11 @@ body {
 }
 
 /****************** MEDIA QUERIES ******************/
+@media (max-width: 1252px) {
+  .header .header-navigation {
+    width: 100%;
+  }
+}
 @media (max-width: 1199.98px) {
   .header .image-container {
     width: 45%;
@@ -12763,6 +12804,15 @@ body {
   .secondary-block-component .row .secondary-block-video .showcase-video iframe {
     height: 172px;
     width: 560px;
+  }
+  .secondary-block-component .row .secondary-block-buttons {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+  .secondary-block-component .row .secondary-block-buttons #margin-for-button {
+    margin-left: 0;
+    margin-top: 30px;
   }
 }
 @media (max-width: 380px) {
